--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -14,7 +14,7 @@
 
   --box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
 
-  --btn-bg-color: linear-gradient(135deg, #4fd1c5, #38b2ac);
+  --btn-bg-color: linear-gradient(135deg, #4cd5c7, #38b2ac);
   --btn-text-light: #fff;
 
   --color-act-pronto: #f1ef86;
