--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -108,8 +108,10 @@
 
 .Pack-header {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    gap: 0.2rem;
 }
 
 .Pack-detalles {
@@ -119,8 +121,9 @@
     flex-direction: column;
     padding: 0.8rem;
     width: 90%;
+    height: auto;
     max-width: 700px;
-    max-height: 90vh;
+    max-height: 100vh;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
@@ -362,6 +365,10 @@
 }
 
 .Activities-layout {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
 }
 
