--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -228,7 +228,8 @@
     /* <- Esto desactiva el estilo nativo */
 
 }
-.CalendarForm-select{
+
+.CalendarForm-select {
     cursor: pointer;
 }
 
@@ -251,38 +252,44 @@
 }
 
 .CalendarForm-btn--confirm {
-    background-color: #579675eb;;
+    background-color: #579675eb;
+    ;
     border: 4px solid #4a7d33;
     box-shadow: 0 4px 12px rgba(76, 154, 42, 0.2);
 
 }
 
 .CalendarForm-btn--cancel {
-    background-color: #483e54eb;;
+    background-color: #483e54eb;
+    ;
     border: 4px solid #483e54eb;
     box-shadow: 0 4px 12px rgba(166, 124, 109, 0.2);
 }
 
-.CalendarForm-btn--confirm:hover{
+.CalendarForm-btn--confirm:hover {
     background-color: #4a7d33;
-    
+
 }
-.CalendarForm-btn--cancel:hover{
+
+.CalendarForm-btn--cancel:hover {
     background-color: #42374feb;
-    
+
 }
 
 /* parte de la actividad seleccionada  */
 
 .ActividadSeleccionada {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #fff;
     border-radius: 24px;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
     padding: 2rem;
     margin: 2rem auto;
     border: 1px solid #f0f0f0;
-    width: 80%;
+    width: 90%;
     height: auto;
 }
 
@@ -322,15 +329,29 @@
     color: var(--color-text-p);
     margin: 0.5rem 0;
 }
-
+.ActividadSeleccionada-fecha{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    gap: 1rem;
+}
 .ActividadSeleccionada-p {
     color: var(--color-text-s);
     line-height: 1.5;
     margin: 0.5rem 0;
 }
 
+.ActividadSeleccionada-h5 {
+    font-size: 1rem;
+    font-weight: 700;
+    color: var(--color-text-s);
+}
+
+
 .ActividadSeleccionada-botones {
     display: flex;
+    width: 100%;
     gap: 1rem;
     margin-bottom: 1.5rem;
     margin-top: 1.5rem;
@@ -372,61 +393,81 @@
     /* background: #4b5bb2; */
 }
 
-@media (min-width: 768px){
-    .CalendarForm{
+@media (min-width: 768px) {
+    .CalendarForm {
         width: 700px;
         max-width: 700px;
         margin: 40px auto;
     }
-    .Actividades-btn{
+
+    .Actividades-btn {
         font-size: 0.9rem;
     }
-    .CalendarioHoras{
+
+    .CalendarioHoras {
         font-size: 0.9rem;
     }
-    .react-calendar{
+
+    .react-calendar {
         width: 500px;
     }
-    .Slider{
+
+    .Slider {
         width: 100%;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        
+
     }
+    .ActividadSeleccionada{
+        width: 70%;
+    }
+    
 }
 
 @media (min-width: 1024px) {
-    .Actividades{
+    .Actividades {
         width: 80%;
     }
-    .CalendarHeader{
+
+    .CalendarHeader {
         width: 80%;
     }
-    .Slider{
+
+    .Slider {
         width: 80%;
         padding: 2rem 0 2.5rem 0;
     }
-    .CalendarForm{
+
+    .CalendarForm {
         width: 800px;
         max-width: 800px;
         margin: 50px auto;
     }
-    .Actividades{
+
+    .Actividades {
         padding: 40px;
     }
-    .Actividades-h3{
+
+    .Actividades-h3 {
         font-size: 1.5rem;
     }
-    .CalendarForm-input{
+
+    .CalendarForm-input {
         font-size: 1rem;
     }
-    .CalendarForm-select{
-        
+
+    .CalendarForm-select {
+
         font-size: 1rem;
     }
-    .CalendarForm-textarea{
+
+    .CalendarForm-textarea {
         font-size: 0.9rem;
     }
-    
+
+    .ActividadSeleccionada{
+        width: 60%;
+    }
+
 }
