--- a/front-tourist-activities/src/css/components/header.css
+++ b/front-tourist-activities/src/css/components/header.css
@@ -5,8 +5,8 @@
     justify-content: space-around;
     align-items: center;
     height: 10vh;
-    
-    
+
+
     width: 100%;
 }
 
@@ -43,13 +43,10 @@
 
 
 @media (min-width: 768px) {
-    .Header{
+    .Header {
         width: 80%;
         justify-content: space-between;
     }
 }
 
-@media (min-width: 1024px) {
-
-
-}
+@media (min-width: 1024px) {}
