--- a/front-tourist-activities/src/css/pages/policy.css
+++ b/front-tourist-activities/src/css/pages/policy.css
@@ -1,14 +1,16 @@
-.PoliticaPriv,.TerminosCondiciones{
+.PoliticaPriv,
+.TerminosCondiciones {
     min-height: 100vh;
     background-color: #e9f5fc;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    
+
 }
 
-.PoliticaPriv-div,.TerminosCondiciones-div{
+.PoliticaPriv-div,
+.TerminosCondiciones-div {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
@@ -23,7 +25,8 @@
 }
 
 
-.PoliticaPriv-title,.TerminosCondiciones-title{
+.PoliticaPriv-title,
+.TerminosCondiciones-title {
     font-size: 1.8rem;
     font-weight: 700;
     color: #222;
@@ -32,7 +35,8 @@
 
 }
 
-.PoliticaPriv-text,.TerminosCondiciones-text{
+.PoliticaPriv-text,
+.TerminosCondiciones-text {
     font-size: 1rem;
     color: #555;
     line-height: 1.6;
@@ -40,7 +44,9 @@
     margin-bottom: 1rem;
     text-align: center;
 }
-.PoliticaPriv-link,.TerminosCondiciones-link{
+
+.PoliticaPriv-link,
+.TerminosCondiciones-link {
     padding: 1rem;
     background-color: #fff;
     box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
@@ -51,7 +57,8 @@
     color: #555;
     transition: scale 1s ease-in-out, color 1s ease-in-out;
 }
-.PoliticaPriv-link:hover{
+
+.PoliticaPriv-link:hover {
     scale: 1.1;
     color: rgb(71, 150, 199);
 }
