--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -159,7 +159,7 @@
 }
 
 .Profile-button--pass {
-    /* margin-top: 2rem; */
+    margin-top: 1rem;
     margin-bottom: 1rem;
     background-color: #f4ad68;
     border: 2px solid #f4ad68cc;
