--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -21,36 +21,9 @@
     z-index: 0;
 }
 
-.WelcomePage::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(to top,
-            rgba(0, 0, 0, 0.5),
-            /* más oscuro abajo */
-            rgba(0, 0, 0, 0.2)
-            /* más claro arriba */
-        );
-    z-index: 1;
-}
 
 
-.WelcomePage-div {
-    position: absolute;
-    bottom: 0;
-    z-index: 2;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    border-radius: 50px 50px 0 0;
-    /* background: var(--color-bg); */
-    /* background-color: #fbfdfd; */
-    ;
-}
-
-.WelcomePage-content {
+.WelcomePage-header {
     padding: 40px;
     height: 100%;
     width: 90%;
@@ -105,32 +78,13 @@
 
 .WelcomePage-subtitle {
     font-size: 1.2rem;
-    color: white;
+    color: BLACK;
 }
 
 .WelcomePage-link {
-    font-weight: 600;
-    font-size: 1.5rem;
-    color: white;
-    padding: 20px;
-    background: linear-gradient(135deg, #31b4ba, #67a2a5);
-    border: 4px solid #8ed0d3;
-    border-radius: 2.5rem;
-    width: auto;
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    box-shadow: 0 10px 24px rgba(0, 0, 0, 0.08);
-    transition: background-color 0.3s ease-out, transform 0.3s ease-out, box-shadow 0.3s ease-out;
-
+    border-bottom: 1px solid black;
 }
-
-.WelcomePage-link:hover {
-    background: linear-gradient(135deg, rgb(57, 173, 179), #6b9ea1);
-    transform: scale(1.03);
-    box-shadow: 0 12px 26px rgba(0, 0, 0, 0.12);
-}
+ 
 
 
 @media (min-width: 768px) {
@@ -142,9 +96,7 @@
         width: 280px;
     }
 
-    .WelcomePage-div {
-        border-radius: 60px 60px 0 0;
-    }
+
 }
 
 @media (min-width: 1024px) {
@@ -152,18 +104,16 @@
         font-size: 80px;
     }
 
-    .WelcomePage-content{
+    .WelcomePage-header {
         justify-content: flex-start;
         align-items: start;
-        
+
     }
 
-    .WelcomePage-description{
+    .WelcomePage-description {
         align-items: start;
         width: 50%;
     }
 
-    .WelcomePage-div {
-        border-radius: 100px 100px 0 0;
-    }
+
 }
