--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -5,6 +5,7 @@
 
   --font-main: 'Nunito', sans-serif;
   --font-logo: 'Quicksand', sans-serif;
+  --font-onboarding: 'Playfair Display', serif;
   --color-bg: linear-gradient(0deg, #68bedb8e, #d4e4ef00);
 
   --btn-padding: 0.75rem 1rem;
