--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -4,15 +4,15 @@
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    background: url('/img/fondo-escena.png');
+    /* background: url('/img/vila-foto.jpg');
     background-size: cover;
     background-position: center;
-    background-repeat: none;
+    background-repeat: none; */
 }
 
 .Login-container,
 .Register-container {
-    padding: 40px 30px;
+    padding: 20px 12px;
     position: absolute;
     width: 100vw;
     display: flex;
@@ -20,9 +20,10 @@
     align-items: center;
     box-shadow: var(--box-shadow);
     height: auto;
-    bottom: 0;
-    left: 0;
-    border-radius: 50px 50px 0 0;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 25px 25px 25px 25px;
     background-color: #fef7ee;
     align-items: center;
     /* justify-content: space-evenly; */
