--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -16,7 +16,7 @@
     width: 90%;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: start;
     gap: 10px;
 
 }
@@ -44,17 +44,47 @@
     font-family: var(--font-main);
 }
 
-.WelcomePage-link {
+/* .WelcomePage-link {
     border-bottom: 1px solid black;
     width: fit-content;
     font-family: var(--font-main);
     color: black;
+} */
+
+.WelcomePage-bottom {
+    position: relative;
+    height: 55vh;
+    min-height: 220px;
+    width: 100%;
+    overflow: hidden;
+
 }
 
-.WelcomePage-img {
-    height: 100vh;
-    object-fit: cover;
-    object-position: center;
+
+.WelcomePage-waves {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    z-index: 0;
+}
+
+.WelcomePage-wave--back {
+    bottom: 12%;
+}
+
+.WelcomePage-wave--front {
+    bottom: 0;
+}
+
+.WelcomePage-actions {
+    position: absolute;
+    bottom: 20px;
+    right: 16px;
+    display: flex;
+    gap: 12px;
+    z-index: 2;
 }
 
 @media (min-width: 768px) {
