--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -90,7 +90,7 @@
     right: 1rem;
     z-index: 31;
     font-size: 1.5rem;
-    background-color: #fff;
+    background-color: var(--white);
     border: none;
     border-radius: 50%;
     width: 2.5rem;
@@ -382,7 +382,7 @@
     align-items: center;
     flex-direction: column;
     justify-content: space-evenly;
-    background-color: #fff;
+    background-color: var(--white);
     border-radius: 20px;
     padding: 0.5rem;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
