--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -86,52 +86,50 @@
     right: 50%;
     transform: translateX(50%);
     display: flex;
-    gap: 12px;
+    gap: 20px;
     z-index: 2;
 }
 
 .WelcomePage-btn {
     display: inline-flex;
     align-items: center;
+    font-weight: 600;
     justify-content: center;
     min-width: 142px;
     padding: 12px 18px;
     border-radius: 14px;
     border: 2px solid transparent;
-    transition: transform .12s ease, background-color .2s ease, color .2s ease, border-color .2s ease, box-shadow .2s ease;
-
+    transition: background-color .2s ease-out, color .2s ease-out;
 }
 
 .WelcomePage-btn:focus-visible {
     outline: 0;
-    box-shadow: 0 0 0 3px rgba(255, 255, 255, .65);
 }
 
-.WelcomePage-btn--filled {
-    background: #fff;
+.WelcomePage-btn--white {
+    background: var(--white);
     color: var(--brand);
-    border-color: #fff;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, .08);
+    border-color: var(--white);
 }
 
-.WelcomePage-btn--filled:hover {
-    background: #fff;
-    box-shadow: 0 10px 28px rgba(0, 0, 0, .12);
+.WelcomePage-btn--white:hover {
+    background: #f1f1f1;
+    border-color: #f1f1f1;
 }
 
-.WelcomePage-btn--filled:active {
+.WelcomePage-btn--white:active {
     background: #f7f7f7;
     color: var(--brand-700);
 }
 
 
-.WelcomePage-btn--outline {
+.WelcomePage-btn--color {
     background: var(--btn-onboarding);
-    color: #fff;
+    color: var(--white);
     border-color: var(--btn-onboarding--hover);
 }
 
-.WelcomePage-btn--outline:hover {
+.WelcomePage-btn--color:hover {
     background: var(--btn-onboarding--hover);
     border-color: var(--btn-onboarding--hover);
 }
@@ -145,6 +143,14 @@
         width: 280px;
     }
 
+    .WelcomePage-description {
+        align-items: center;
+        width: 70%;
+    }
+
+    .WelcomePage-actions {
+        gap: 28px;
+    }
 
 }
 
@@ -153,9 +159,10 @@
         font-size: 80px;
     }
 
-    .WelcomePage-description {
-        align-items: center;
-        width: 70%;
+
+
+    .WelcomePage-actions {
+        gap: 40px;
     }
 
 
