--- a/front-tourist-activities/src/css/index.css
+++ b/front-tourist-activities/src/css/index.css
@@ -21,10 +21,10 @@
   --color-act-pasada: #f38989;
   --color-act-futura: #b2f493;
 
+  /* gradiantes olas */
   --grad-start: #FF7A45;
-  /* naranja */
   --grad-end: #FF4D84;
-  /* rosa */
+
 
   --brand: #9c2f21;          /* texto del filled */
   --brand-700: #c21805;
