--- a/front-tourist-activities/src/css/pages/welcomePage.css
+++ b/front-tourist-activities/src/css/pages/welcomePage.css
@@ -10,7 +10,7 @@
 .WelcomePage-header {
     position: relative;
     padding: 0 12px;
-    margin-top: 40px;
+    margin-top: 26px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -36,7 +36,7 @@
 }
 
 .WelcomePage-title {
-    font-size: 1.8rem;
+    font-size: 2.25rem;
     font-weight: bold;
     background: linear-gradient(90deg, #f26483, #faa536);
     /* para que solo coja las letras */
@@ -137,7 +137,7 @@
 
 @media (min-width: 768px) {
     .WelcomePage-title {
-        font-size: 42px;
+        font-size: 2.625rem;
     }
 
     .WelcomePage-logo {
@@ -157,10 +157,12 @@
 
 @media (min-width: 1024px) {
     .WelcomePage-title {
-        font-size: 80px;
+        font-size: 5rem;
     }
 
-
+    .WelcomePage-img {
+        height: 360px;
+    }
 
     .WelcomePage-actions {
         gap: 40px;
