update estructura register

--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -2,7 +2,6 @@
 .Register {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     min-height: 100vh;
     background-color: var(--color-bg-onb);
@@ -15,8 +14,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     height: auto;
     border-radius: 25px;
+    flex: 1;
 }
 
 .Login-img {
