--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -209,7 +209,8 @@
     display: flex;
     justify-content: center;
     gap: 28px;
-    margin-top: 2rem;
+    margin-top: auto;
+    padding: 16px;
 }
 
 .Policy-link {
