update vh junto con dvh para navs modernos en movil

--- a/front-tourist-activities/src/css/components/header.css
+++ b/front-tourist-activities/src/css/components/header.css
@@ -5,6 +5,7 @@
     justify-content: space-around;
     align-items: center;
     height: 10vh;
+    height: 10dvh;
 
 
     width: 100%;
@@ -16,8 +17,11 @@
     background: linear-gradient(90deg, #f26483, #faa536);
     /* para que solo coja las letras */
     -webkit-background-clip: text;
-    /* hace que el color normla del texto sea transparente, lo q hace q solo se vea el color del bakground */
+    /* define solo el background q le pones el color */
+    background-clip: text;
+    /* estandar futuro */
     color: transparent;
+    /* se le quita el color normal del texto */
     pointer-events: none;
     font-family: var(--font-logo);
 }
