--- a/front-tourist-activities/src/css/pages/calendar.css
+++ b/front-tourist-activities/src/css/pages/calendar.css
@@ -32,6 +32,7 @@
     scroll-snap-type: x mandatory;
     width: 100%;
     max-width: 100vw;
+    max-width: 100dvw;
     scrollbar-width: none;
     scroll-behavior: smooth;
     gap: 10px;
