--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -1,6 +1,7 @@
 .Home {
     min-width: 100%;
     max-width: 100vw;
+    max-width: 100dvw;
     /* overflow-x: auto ; */
     display: flex;
     flex-direction: column;
@@ -47,6 +48,7 @@
     /*suavidad al scroll */
     scrollbar-width: none;
     max-width: 100vw;
+    max-width: 100dvw;
     box-sizing: border-box;
     padding: 1.5rem;
 
@@ -73,7 +75,9 @@
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    width: 100dvw;
+    height: 100vh; /* fallback */
+    height: 100dvh; /* para nav modernos con cambios de barra dinamicos */
     z-index: 30;
     display: flex;
     flex-direction: column;
@@ -125,6 +129,7 @@
     height: auto;
     max-width: 700px;
     max-height: 100vh;
+    max-height: 100dvh; /* por si cambia en movil el calculo con barras de navegador modernas */
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
@@ -181,10 +186,10 @@
     display: -webkit-box;
     /*para tener un box para saltar lineas */
     -webkit-line-clamp: 3;
-    /* máximo 3 líneas antes de cortar */
+    /* máximo 3 líneas antes de cortar y poner puntos suspensivs */
     -webkit-box-orient: vertical;
     /* en modo vertical  */
-    align-items: center;
+    line-clamp: 3;
     margin: 0.3rem 0;
     font-size: 0.85rem;
     color: #666;
