--- a/front-tourist-activities/src/css/pages/policy.css
+++ b/front-tourist-activities/src/css/pages/policy.css
@@ -1,6 +1,7 @@
 .PoliticaPriv,
 .TerminosCondiciones {
-    min-height: 100vh;
+    min-height: 100vh; /* fallback */
+    min-height: 100dvh; /* para navs modernos (cambio valores por barra dinamica) */
     background-color: #e9f5fc;
     display: flex;
     flex-direction: column;
