--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -1,12 +1,15 @@
 .Profile {
-    height: 100vh;
+    height: 100vh; /* fallback */
+    height: 100dvh; /* para nav modernos con cambios de barra dinamicos */
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     padding: 2rem;
-    max-height: 100vh;
+    max-height: 100vh; /* fallback */
+    max-height: 10dvh; /* para nav modernos con cambios de barra dinamicos */
     width: 100vw;
+    width: 100dvw;
     position: relative;
     /*overflow: hidden;*/
     /* background-color: #f4f6f8; */
