--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -5,12 +5,13 @@
     align-items: center;
     min-height: 100vh; /* fallback */
     min-height: 100dvh; /* por si cambia en movil el calculo con barras de navegador modernas */
-    background-color: var(--color-bg-onb);
+    background-color: var(--color-bg-blueSoft);
 }
 
 .Login-container,
 .Register-container {
-    padding: 20px 12px;
+    padding: 0 12px;
+    /* padding-top: 20px; */
     width: 100vw;
     width: 100dvw;
     display: flex;
@@ -36,6 +37,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
+    gap: 14px;
 }
 
 .Login-title {
@@ -73,7 +75,7 @@
 
 .Login-label,
 .Register-label {
-    margin: 14px 0;
+    margin-top:14px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -122,7 +124,7 @@
 
 .Login-btn,
 .Register-btn {
-    margin-top: 30px;
+    margin-top: 14px;
     height: 50px;
     width: 100%;
     color: #fff;
@@ -189,7 +191,7 @@
 }
 
 .Login-error {
-    margin: 10px;
+    margin: 8px;
     font-size: 1rem;
     color: rgb(108, 5, 5);
 }
